--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,6 +5,9 @@
     padding: 10px;
     height: 40px;
     border-bottom: 1px solid lightgrey;
+    top: 0;
+    position: sticky;
+    background-color: white;
     .left{
         display: flex;
         align-items: center;
